Chat gpt translated

--- a/English.tex
+++ b/English.tex
@@ -2,15 +2,15 @@
 \usepackage[
     pdftex,
     pdfauthor={Jorge C. Henríquez Tolhuysen},
-    pdftitle={Curriculum Vitae de Jorge C. Henríquez Tolhuysen},
+    pdftitle={Curriculum Vitae of Jorge C. Henríquez Tolhuysen},
     pdfsubject={Curriculum Vitae},
     pdfkeywords={
         Curriculum Vitae, 
         Jorge Henríquez, 
-        Estudios, 
-        Experiencia,
-        Sistemas Desarrollados,
-        Lenguajes de programación, 
+        Studies, 
+        Experience,
+        Developed Systems,
+        Programming languages, 
         Java, 
         Visual Basic 6.0, 
         Visual Basic .Net, 
@@ -27,29 +27,29 @@
         Dwg,
         Bim,
     },
-    pdfproducer={Latex con hyperref},
+    pdfproducer={Latex with hyperref},
     pdfcreator={pdflatex}
-]{hyperref}                 % Paquete para hipervínculos
-\usepackage[T1]{fontenc}    % Ajustamos la codificación de las fonts (salida)
+]{hyperref}                 
+\usepackage[T1]{fontenc}    
 \usepackage{tgbonum}
-\usepackage[english]{babel} % Comando especifico para guionado de palabras en español
+\usepackage[english]{babel} 
 \usepackage[
-    paperwidth=21.59cm,     % Establecemos el ancho del papel (letter width)
-    paperheight=27.94cm,    % Establecemos el alto del papel (letter height)
+    paperwidth=21.59cm,     
+    paperheight=27.94cm,    
     includehead,
-    nomarginpar,            % Nada de margenes en los parrafos
-    textwidth=18cm,         % Establecemos el ancho del area de texto a 18cm
-    textheight=21.5cm,      % Establecemos el alto  del area de texto a 21.5cm
-    headheight=87.93pt,     % Establecemos el alto del encabezado a 83.9 pt
+    nomarginpar,            
+    textwidth=18cm,         
+    textheight=21.5cm,      
+    headheight=87.93pt,     
 ]{geometry}
 \usepackage{xcolor}
 \usepackage{fancyhdr}
 \author{Jorge C. Henríquez Tolhuysen}
 \date{\today}
 \begin{document}
-\pagestyle{fancy}           % Establecemos el estilo de página a "fancy"...
-\fancyhead{}                % borramos los encabezados de página
-\fancyfoot{}                % borramos los pies de página
+\pagestyle{fancy}           
+\fancyhead{}                
+\fancyfoot{}                
 \fancyhead[C]{
     \colorbox{lightgray}{%
         \parbox{0.98\headwidth}{
@@ -60,7 +60,7 @@
             \hrule height 2pt
             \vspace{2mm}
             \textbf{Electronics Engineer from The Universidad Técnica Federico Santa María}\\
-            \textbf{Accountant and Auditor from The Universidad Tecnólogica de Chile, INACAP}\\
+            \textbf{Accountant and Auditor from The Universidad Tecnológica de Chile, INACAP}\\
             \vspace{2mm}
             \hrule
             \vspace{1mm}
@@ -69,193 +69,188 @@
         }
     }%
 }
-\fancyfoot[R]{\thepage} % pie de página lado derecho
-\fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, creado con \LaTeX} % pie de página lado izquierdo
+\fancyfoot[R]{\thepage}
+\fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, created with \LaTeX}
 
 \section{Technical Skills}
-\label{sec:competencias-section}
 Desktop and Servers O.S. Installation and configuration, Network and related services configuration, TCP/IP Advanced management, Multiple languages Software Development.
 
 \section{Personal Traits}
-\label{sec:caracteristicas-section}
-Loyal, Analitic, Proactive, Highly motivated, collaborative, confident, adaptable to change, and a quick learner.
+Loyal, Analytic, Proactive, Highly motivated, collaborative, confident, adaptable to change, and a quick learner.
 
 \section{Studies/Education}
-\label{sec:estudios-section}
 \begin{itemize}
-    \item From 1989 to 1994, \textbf{Ingeniería Electrónica}, Degree obtained at The \href{https://www.usm.cl}{\textbf{Universidad Técnica Federico Santa María}} in Valparaiso, Chile, Ayudante para las asignaturas de Programación de Computadores en Pascal y Telefonía.
-    \item From 2013 to 2016, \textbf{Contabilidad y Auditoría}, All subjects approved, no degree obtained, Missing professional internship, studies at the \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile, INACAP}}, recognized for two consecutive years as the top student in the Administration and Business program.
+    \item From 1989 to 1994, \textbf{Electronics Engineering}, Degree obtained at The \href{https://www.usm.cl}{\textbf{Universidad Técnica Federico Santa María}} in Valparaiso, Chile, Teaching assistant for Computer Programming (Pascal) and Telephony courses.
+    \item From 2013 to 2016, \textbf{Accounting and Auditing}, All subjects approved, no degree obtained, Missing professional internship, studies at the \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile, INACAP}}, recognized for two consecutive years as the top student in the Administration and Business program.
 \end{itemize}
 
 \section{Certifications}
-\label{sec:certificaciones-section}
 \begin{itemize}
-    \item 2006, Sun Certified Java Programmer de Sun Microsystems, con 88\% rendimiento.
+    \item 2006, Sun Certified Java Programmer from Sun Microsystems, with 88\% score.
 \end{itemize}
 
 \section{Work Experience}
-\label{sec:laboral-section}
 \begin{itemize}
-    \item 2026, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Migra aplicación para el Escritorio de Windows, escrita en C\#, con .Net Framework 4.78 y usando Windows Forms a versión con .Net 8.0 y WinUi 3.
+    \item 2026, at \textbf{ALVAREZ \& ASOCIADOS S.p.A.} as Independent Consultant, Migrates a Windows Desktop application written in C\#, with .Net Framework 4.78 and using Windows Forms to a version with .Net 8.0 and WinUi 3.
     \begin{description}
-        \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2026, C\#, .Net 8.0, WinUI 3, Html, Javascript, Css.}
+        \item[Related Technologies:] \textit{Visual Studio Professional 2026, C\#, .Net 8.0, WinUI 3, Html, Javascript, Css.}
     \end{description}
-    \item Desde 2021 al 2025, en \href{https://www.get-fm.de}{\textbf{FACILITY CONSULTANTS GmbH}} como Consultor Independiente, Desarrolló una Clase PHP que toma un Archivo AutoCAD 2D DWG y genera código SVG. Programó una Libreria JavaScript que acepta un archivo BIM y produce un renderizado 3D del mismo, ambas son usadas en el mismo sitio web.
+    \item From 2021 to 2025, at \href{https://www.get-fm.de}{\textbf{FACILITY CONSULTANTS GmbH}} as Independent Consultant, Developed a PHP Class that takes a 2D AutoCAD DWG file and generates SVG code. Programmed a JavaScript Library that accepts a BIM file and produces a 3D rendering of it, both are used on the same website.
     \begin{description}
-        \item[Tecnologías relacionadas:] \textit{Visual Studio Code, Php, Javascript, Typescript, Tailwindcss, Threejs.}
+        \item[Related Technologies:] \textit{Visual Studio Code, Php, Javascript, Typescript, Tailwindcss, Threejs.}
     \end{description}
-    \item Desde 2021 al 2025, en \textbf{ALVAREZ \& ASOCIADOS S.p.A.} como Consultor Independiente, Construyó una aplicación para el Escritorio de Windows, escrita en C\#, que hace web scraping de un ERP y genera salidas de Balances y Estados de Resultados en pantalla y archivos Excel.
+    \item From 2021 to 2025, at \textbf{ALVAREZ \& ASOCIADOS S.p.A.} as Independent Consultant, Built a Windows Desktop application written in C\# that performs web scraping on an ERP and generates Balance Sheets and Income Statements on screen and Excel files.
     \begin{description}
-        \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Webscraping, C\#.}
+        \item[Related Technologies:] \textit{Visual Studio Professional 2022, Webscraping, C\#.}
     \end{description}
     \newpage
-    \item Desde 2021 al 2025, en \href{https://stratex.cl}{\textbf{STRATEX CONSULTORES}} como Consultor Independiente, Programó un Complemento Excel, escrito en C\#, para Importar y Fusionar Archivos de Texto de manera desatendida.
+    \item From 2021 to 2025, at \href{https://stratex.cl}{\textbf{STRATEX CONSULTORES}} as Independent Consultant, Programmed an Excel Add-in written in C\# to Import and Merge Text Files unattended.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Visual Studio Professional 2022, Integración con Excel, C\#}.
+        \item[Related Technologies:] \textit{Visual Studio Professional 2022, Excel Integration, C\#}.
     \end{description}
-    \item Desde 2021 al 2024, en \href{https://www.khipu.com}{\textbf{KHIPU S.p.A.}} como Ingeniero de Software Senior en area backend.
+    \item From 2021 to 2024, at \href{https://www.khipu.com}{\textbf{KHIPU S.p.A.}} as Senior Software Engineer in the backend area.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{IntelliJ, Java, Postgresql, Bitbucket, Git, Terraform, IBM Cloud, Docker.}
+        \item[Related Technologies:] \textit{IntelliJ, Java, Postgresql, Bitbucket, Git, Terraform, IBM Cloud, Docker.}
     \end{description}
-    \item Desde 2019 al 2021, en \href{https://www.comciencia.cl/}{\textbf{COMCIENCIA INFORMÁTICA S.p.A.}} como Desarrollador Full Stack Senior, para el software \href{https://www.s-verein.de/}{S-Verein}, COMCIENCIA es una Compañia con Base en Chile de propiedad Alemana. 
+    \item From 2019 to 2021, at \href{https://www.comciencia.cl/}{\textbf{COMCIENCIA INFORMÁTICA S.p.A.}} as Senior Full Stack Developer, for the software \href{https://www.s-verein.de/}{S-Verein}, COMCIENCIA is a Chile-based company with German ownership. 
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Php, Oracle DB, Mysql DB, Maria DB, PhpStorm, Youtrack, Svn, Git, Linux, Aws.}
+        \item[Related Technologies:] \textit{Php, Oracle DB, Mysql DB, Maria DB, PhpStorm, Youtrack, Svn, Git, Linux, Aws.}
     \end{description}
-    \item Desde 2010 al 2019, en \href{https://www.servimaq.cl}{\textbf{SERVIMAQ S.A.}} como Consultor Independiente, Configurando y Administrando Windows Server y SQL Server. Administrando Firewall Watchguard y Desarrollando Software.
+    \item From 2010 to 2019, at \href{https://www.servimaq.cl}{\textbf{SERVIMAQ S.A.}} as Independent Consultant, Configuring and Administering Windows Server and SQL Server. Administering Watchguard Firewall and Developing Software.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Genexus, Visual Basic .NET, Java}
+        \item[Related Technologies:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Genexus, Visual Basic .NET, Java}
     \end{description}
-    \item Desde 2003 al 2025, en \href{https://trucaoberries.com/es/inicio/}{\textbf{TRUCAO BERRIES}} como Consultor Independiente, Configurando y Administrando Windows Server, SQL Server y Softland Erp. Administrando Firewall Watchguard. Desarrollando Software.
+    \item From 2003 to 2025, at \href{https://trucaoberries.com/es/inicio/}{\textbf{TRUCAO BERRIES}} as Independent Consultant, Configuring and Administering Windows Server, SQL Server and Softland ERP. Administering Watchguard Firewall. Developing Software.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Softland Erp, Firewall Watchguard, Visual Studio Professional, Visual Basic .NET, Android Studio, Java}.
+        \item[Related Technologies:] \textit{Windows Server, Ms Sql Server, Softland Erp, Firewall Watchguard, Visual Studio Professional, Visual Basic .NET, Android Studio, Java}.
     \end{description}
-    \item Desde 2013 al 2021, en \href{https://www.integra-chile.cl}{\textbf{INTEGRA CHILE}} como Consultor Independiente, Configurando y Administrando Windows Server y SQL Server. Administrando Firewall Watchguard/Fortinet.
+    \item From 2013 to 2021, at \href{https://www.integra-chile.cl}{\textbf{INTEGRA CHILE}} as Independent Consultant, Configuring and Administering Windows Server and SQL Server. Administering Watchguard/Fortinet Firewall.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Firewall Fortinet.}
+        \item[Related Technologies:] \textit{Windows Server, Ms Sql Server, Firewall Watchguard, Firewall Fortinet.}
     \end{description}
-    \item Desde 2016 al 2017, en \href{https://www.liceoraac.cl}{\textbf{LICEO R.A.A.C.}} como Profesor para las asignaturas de Redes y Comunicaciones.
-    \item Desde 2003 al 2011, en \textbf{TERRAGRICOLA} como consultor Independiente, Configurando y administrando Servidores Windows/Netware/Linux. Administrando Firewall Watchguard.
+    \item From 2016 to 2017, at \href{https://www.liceoraac.cl}{\textbf{LICEO R.A.A.C.}} as Teacher for Network and Communications courses.
+    \item From 2003 to 2011, at \textbf{TERRAGRICOLA} as Independent Consultant, Configuring and Administering Windows/Netware/Linux Servers. Administering Watchguard Firewall.
         \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Windows Server, Novell Netware, Linux, Firewall Watchguard.}
+        \item[Related Technologies:] \textit{Windows Server, Novell Netware, Linux, Firewall Watchguard.}
     \end{description}
-    \item Desde 2008 al 2009, en \href{https://www.uach.cl}{\textbf{UNIVERSIDAD AUSTRAL DE CHILE}} como Profesor Asistente para las asignaturas relacionadas con Ms Office en la Escuela de Medicina. Desarrollo de software.
+    \item From 2008 to 2009, at \href{https://www.uach.cl}{\textbf{UNIVERSIDAD AUSTRAL DE CHILE}} as Assistant Professor for courses related to MS Office at the School of Medicine. Software development.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{Visual Studio Professional, Visual Basic .NET, Adobe FLEX.}
+        \item[Related Technologies:] \textit{Visual Studio Professional, Visual Basic .NET, Adobe FLEX.}
     \end{description}
-    \item Desde 2005 al 2006, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en las sedes de Osorno y Puerto Montt.
-    \item Desde 2004 al 2005, en \href{https://www.ulagos.cl}{\textbf{UNIVERSIDAD DE LOS LAGOS}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en las sedes de Osorno y Puerto Montt.
-    \item Desde 2003 al 2005, en \textbf{SINGA S.A.} como Lider de Proyecto y Desarrollador Senior para el proyecto SIPP de Marine Harvest Puerto Montt.
+    \item From 2005 to 2006, at \href{https://portal.inacap.cl}{\textbf{INACAP}} as Professor in several courses for the Computer Engineering program at the Osorno and Puerto Montt campuses.
+    \item From 2004 to 2005, at \href{https://www.ulagos.cl}{\textbf{UNIVERSIDAD DE LOS LAGOS}} as Professor in several courses for the Computer Engineering program at the Osorno and Puerto Montt campuses.
+    \item From 2003 to 2005, at \textbf{SINGA S.A.} as Project Leader and Senior Developer for the SIPP project of Marine Harvest Puerto Montt.
     \begin{description} 
-        \item[Tecnologías relacionadas:] \textit{GENEXUS generando código Visual Basic 6.0.}
+        \item[Related Technologies:] \textit{GENEXUS generating Visual Basic 6.0 code.}
     \end{description}
     \newpage
-    \item El 2003, en \textbf{INNOVA CHILE} como Técnico de campo para las estaciones de combustible ESSO.
-    \item El 2002, en \href{https://portal.inacap.cl}{\textbf{INACAP}} como Profesor en varias asignaturas para la carrera de Ingeniería Informática en la sede Osorno.
-    \item Desde 2001 al 2002, en \textbf{TECNOLÓGICO DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas para la carrera de Técnico en Informática.
-    \item Desde 1999 al 2002, en \href{https://telsur.cl}{\textbf{TELEFÓNICA DEL SUR}} como Ingeniero de Proyectos para el Area Comercial, Zonal Osorno.
-    \item Desde 1997 al 1998, en \textbf{CDI DE LA UNIVERSIDAD DE LOS LAGOS} como Profesor en varias asignaturas la carrera de Ingeniería Informática.
+    \item In 2003, at \textbf{INNOVA CHILE} as Field Technician for ESSO fuel stations.
+    \item In 2002, at \href{https://portal.inacap.cl}{\textbf{INACAP}} as Professor in several courses for the Computer Engineering program at the Osorno campus.
+    \item From 2001 to 2002, at \textbf{TECNÓLOGICO DE LA UNIVERSIDAD DE LOS LAGOS} as Professor in several courses for the Computer Technician program.
+    \item From 1999 to 2002, at \href{https://telsur.cl}{\textbf{TELEFÓNICA DEL SUR}} as Project Engineer for the Commercial Area, Osorno Zone.
+    \item From 1997 to 1998, at \textbf{CDI DE LA UNIVERSIDAD DE LOS LAGOS} as Professor in several courses for the Computer Engineering program.
 \end{itemize}
 
 \section{Software Development relevant experience}
 \label{sec:desarrollo-section}
 \begin{itemize}
-    \item En el 2026, Migra aplicación escrita en C\#, usando .Net Framework 4.78 y Windows Forms a .Net 8.0 y WinUI 3.
+    \item In 2026, Migrates application written in C\#, using .Net Framework 4.78 and Windows Forms to .Net 8.0 and WinUI 3.
     \begin{description}
-        \item[Nombre del Software:] \textbf{SICE.NEXT.}
-        \item[Desarrollado para:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2026, C\#, .Net 8.0, WinUI 3, WebView, Excel, Ceres ERP.}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SICE.NEXT.}
+        \item[Developed for:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2026, C\#, .Net 8.0, WinUI 3, WebView, Excel, Ceres ERP.}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2021 al 2025, Desarrollo de clase Php para la conversión de archivos Autocad DWG a datos SVG, Desarrollo de libreria Javascript para la conversión de archivos BIM a formato IFC y su posterior renderizado 3D.
+    \item From 2021 to 2025, Development of a PHP class for the conversion of AutoCAD DWG files to SVG data, Development of a JavaScript library for the conversion of BIM files to IFC format and their subsequent 3D rendering.
     \begin{description}
-        \item[Nombre del Software:] \textbf{GETFM.}
-        \item[Desarrollado para:] \textit{FACILITY CONSULTANTS GmbH, Nufringen, Alemania.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio Code, Php, Javascript, Tailwindcss.}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{GETFM.}
+        \item[Developed for:] \textit{FACILITY CONSULTANTS GmbH, Nufringen, Germany.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio Code, Php, Javascript, Tailwindcss.}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2021 al 2025, Desarrollo de software para windows, que realiza Webscraping a sistema ERP en la web y genera Balances contables y Estados de resultados en formatos personalizados.  
+    \item From 2021 to 2025, Development of Windows software that performs web scraping on a web-based ERP system and generates accounting Balance Sheets and Income Statements in customized formats.  
     \begin{description}
-        \item[Nombre del Software:] \textbf{SICE.}
-        \item[Desarrollado para:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2019-2022, C\#, Excel, Ceres ERP.}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SICE.}
+        \item[Developed for:] \textit{ALVAREZ \& ASOCIADOS S.p.A., Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2019-2022, C\#, Excel, Ceres ERP.}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
     \newpage
-    \item Desde 2021 al 2025, Desarrollo de complemento para Excel que permite importar Libros de Compras, Ventas y Honorarios generados por SAP.  
+    \item From 2021 to 2025, Development of an Excel add-in that allows importing Purchase, Sales and Fees Books generated by SAP.  
     \begin{description}
-        \item[Nombre del Software:] \textbf{EXAISTRATEX.}
-        \item[Desarrollado para:] \textit{STRATEX CONSULTORES, Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2019-2022, C\#, Excel.}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{EXAISTRATEX.}
+        \item[Developed for:] \textit{STRATEX CONSULTORES, Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2019-2022, C\#, Excel.}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2013 al 2018, Desarrollo de Software e Integración con terminal TRANSBANK lector de tarjetas de debito/crédito para su producto POS INTEGRADO con un sistema WEB.
+    \item From 2013 to 2018, Software development and integration with TRANSBANK terminals for debit/credit card readers for its INTEGRATED POS product with a WEB system.
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIPOS.}
-        \item[Desarrollado para:] \textit{VITAMINA WORK LIFE, Santiago, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2012-2017, Visual Basic .NET, ASP .NET.}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIPOS.}
+        \item[Developed for:] \textit{VITAMINA WORK LIFE, Santiago, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2012-2017, Visual Basic .NET, ASP .NET.}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}    
-    \item Desde 2013 al 2018, Desarrollo de Software e Integración de ERP MANAGER con software de terceros para la emision de documentos tributarios electrónicos (DTE).
+    \item From 2013 to 2018, Software development and integration of MANAGER ERP with third-party software for the issuance of electronic tax documents (DTE).
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIDTE.}
-        \item[Desarrollado para:] \textit{SERVIMAQ S.A., Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2012-2017, Visual Basic .NET, Xml, Dte}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIDTE.}
+        \item[Developed for:] \textit{SERVIMAQ S.A., Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2012-2017, Visual Basic .NET, Xml, Dte}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2012 al 2018, Desarrollo de sistema para planta de empacado de arandanos, integrando balanzas/romanas estaticas y software de terceros, culminando con un sistema autonomo. 
+    \item From 2012 to 2018, Development of a system for a blueberry packing plant, integrating static scales/weighbridges and third-party software, culminating in an autonomous system. 
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIP.}
-        \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2012-2019, Visual Basic .NET, Rs-232, Tcp-Ip}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIP.}
+        \item[Developed for:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2012-2019, Visual Basic .NET, Rs-232, Tcp-Ip}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2011 al 2018, Desarrollo, mantenimiento y evolución de software para control de stock y agendamiento de citas para el cumplimiento de la certificación KODAWARI para concesionarios TOYOTA. 
+    \item From 2011 to 2018, Development, maintenance and evolution of software for stock control and appointment scheduling to comply with KODAWARI certification for TOYOTA dealerships. 
     \begin{description}
-        \item[Nombre del Software:] \textbf{KODAWARI.}
-        \item[Desarrollado para:] \textit{SERVIMAQ S.A.,Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{KODAWARI.}
+        \item[Developed for:] \textit{SERVIMAQ S.A.,Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Genexus 9, Visual Basic 6}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
     \newpage
-    \item Desde 2003 al 2018, Desarrollo, mantenimiento y evolución de un sistema integrado Windows/Android para la recolección de información en terreno para la cosecha de arandanos, utilizando terminales de datos Honeywell, teléfonos celulares Samsung y un sistema de pago de nóminas. 
+    \item From 2003 to 2018, Development, maintenance and evolution of an integrated Windows/Android system for field data collection for blueberry harvesting, using Honeywell data terminals, Samsung mobile phones and a payroll payment system. 
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIC.}
-        \item[Desarrollado para:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2002-2017, Visual Basic .NET, Android Studio, Java, Terminales Honeywell, Windows Embedded, Teléfonos Celulares Samsung, Códigos de Barra, Códigos QR, Impresoras Zebra}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIC.}
+        \item[Developed for:] \textit{TRUCAO BERRIES, Rio Negro, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2002-2017, Visual Basic .NET, Android Studio, Java, Honeywell Terminals, Windows Embedded, Samsung Mobile Phones, Barcodes, QR Codes, Zebra Printers}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2015 al 2016, Desarrollo de sistema integrado Windows/Android para la recolección de información en terreno de despachos de petroleo y la emisión del correspondiente documento tributario electrónico generado a travez de la automatización de software de terceros. 
+    \item From 2015 to 2016, Development of an integrated Windows/Android system for field data collection of petroleum dispatches and the issuance of the corresponding electronic tax document generated through the automation of third-party software. 
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIRC.}
-        \item[Desarrollado para:] \textit{CONSTRUCTORA HARR S.A., Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2012-2015, Visual Basic .NET, Android Studio, Java, Transtecnia Contabilidad, Tcp-Ip}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIRC.}
+        \item[Developed for:] \textit{CONSTRUCTORA HARR S.A., Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2012-2015, Visual Basic .NET, Android Studio, Java, Transtecnia Accounting, Tcp-Ip}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item En el 2016, Software para la extracción de datos para Balances Contables desde los datos ingresados en ERP FLEXLINE.
+    \item In 2016, Software for data extraction for Accounting Balance Sheets from data entered in FLEXLINE ERP.
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIFLEX.}
-        \item[Desarrollado para:] \textit{SALMONES CALETA BAY, Osorno, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Visual Studio 2015, Visual Basic .NET, ERP Flexline}
-        \item[Labores:] \textit{Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIFLEX.}
+        \item[Developed for:] \textit{SALMONES CALETA BAY, Osorno, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Visual Studio 2015, Visual Basic .NET, ERP Flexline}
+        \item[Duties:] \textit{Analysis, Design and Development.}
     \end{description}
-    \item Desde 2003 al 2005, Desarrollo para software de control de producción de plantas de proceso de salmón, integrando comunicación con balanzas estáticas y dinámicas, para el calibrado de materia prima, producto términado y registro de embalajes, asi como para los terminales de recolección de datos Honeywell. 
+    \item From 2003 to 2005, Development of software for production control of salmon processing plants, integrating communication with static and dynamic scales for calibration of raw material, finished product and packaging records, as well as for Honeywell data collection terminals. 
     \begin{description}
-        \item[Nombre del Software:] \textbf{SIPP.}
-        \item[Desarrollado para:] \textit{MARINE HARVEST, Puerto Montt, Chile.}
-        \item[Posición:] \textit{Analista y Desarrollador.}
-        \item[Herramientas:] \textit{Genexus 9, Visual Basic 6, Rs-232, Terminales Honeywell, Windows Embedded, Códigos de Barra, Impresoras Zebra}
-        \item[Labores:] \textit{Liderazgo, Análisis, Diseño y Desarrollo.}
+        \item[Software Name:] \textbf{SIPP.}
+        \item[Developed for:] \textit{MARINE HARVEST, Puerto Montt, Chile.}
+        \item[Position:] \textit{Analyst and Developer.}
+        \item[Tools:] \textit{Genexus 9, Visual Basic 6, Rs-232, Honeywell Terminals, Windows Embedded, Barcodes, Zebra Printers}
+        \item[Duties:] \textit{Leadership, Analysis, Design and Development.}
     \end{description}
 \end{itemize}
 \end{document}
