Se anotan las secciones en ingles

--- a/English.tex
+++ b/English.tex
@@ -73,23 +73,28 @@
 \fancyfoot[L]{Jorge Henríquez Tolhuysen, \today, created with \LaTeX}
 
 \section{Technical Skills}
+\label{sec:competencias-section}
 Desktop and Servers O.S. Installation and configuration, Network and related services configuration, TCP/IP Advanced management, Multiple languages Software Development.
 
 \section{Personal Traits}
+\label{sec:caracteristicas-section}
 Loyal, Analytic, Proactive, Highly motivated, collaborative, confident, adaptable to change, and a quick learner.
 
 \section{Studies/Education}
+\label{sec:estudios-section}
 \begin{itemize}
     \item From 1989 to 1994, \textbf{Electronics Engineering}, Degree obtained at The \href{https://www.usm.cl}{\textbf{Universidad Técnica Federico Santa María}} in Valparaiso, Chile, Teaching assistant for Computer Programming (Pascal) and Telephony courses.
     \item From 2013 to 2016, \textbf{Accounting and Auditing}, All subjects approved, no degree obtained, Missing professional internship, studies at the \href{https://www.inacap.cl}{\textbf{Universidad Tecnológica de Chile, INACAP}}, recognized for two consecutive years as the top student in the Administration and Business program.
 \end{itemize}
 
 \section{Certifications}
+\label{sec:certificaciones-section}
 \begin{itemize}
     \item 2006, Sun Certified Java Programmer from Sun Microsystems, with 88\% score.
 \end{itemize}
 
 \section{Work Experience}
+\label{sec:laboral-section}
 \begin{itemize}
     \item 2026, at \textbf{ALVAREZ \& ASOCIADOS S.p.A.} as Independent Consultant, Migrates a Windows Desktop application written in C\#, with .Net Framework 4.78 and using Windows Forms to a version with .Net 8.0 and WinUi 3.
     \begin{description}
